--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salto-io/salesforce-formula-parser",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "Apache-2.0",
   "description": "Salto Salesforce formula parser",
   "repository": {
@@ -12,7 +12,9 @@
   },
   "files": [
     "src",
-    "index.ts"
+    "index.ts",
+    "tsconfig.json",
+    "*.js"
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
