--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "^7.14.3",
     "jest": "^27.4.5",
     "jest-extended": "^1.2.0",
+    "jest-junit": "^12.0.0",
     "ts-jest": "^27.1.2",
     "typescript": "4.1.3"
   }
